Hack/main/default/objects/Character__c/fields/Alignment__c.field-meta.xml
<CustomField>
    <fullName>Alignment__c</fullName>
    <label>Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LawfulEvil</fullName>
                <label>Lawful Evil</label>
            </value>
            <value>
                <fullName>LawfulGood</fullName>
                <label>Lawful Good</label>
            </value>
            <value>
                <fullName>LawfulNeutral</fullName>
                <label>Lawful Neutral</label>
            </value>
            <value>
                <fullName>Neutral</fullName>
                <label>True Neutral</label>
            </value>
            <value>
                <fullName>NeutralGood</fullName>
                <label>Neutral Good</label>
            </value>
            <value>
                <fullName>NeutralEvil</fullName>
                <label>Neutral Evil</label>
            </value>
            <value>
                <fullName>ChaoticGood</fullName>
                <label>Chaotic Good</label>
            </value>
            <value>
                <fullName>ChaoticEvil</fullName>
                <label>Chaotic Evil</label>
            </value>
            <value>
                <fullName>ChaoticNeutral</fullName>
                <label>Chaotic Neutral</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>