Hack/main/default/objects/Character__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Artificer</fullName>
            </value>
            <value>
                <fullName>Barbarian</fullName>
            </value>
            <value>
                <fullName>Bard</fullName>
            </value>
            <value>
                <fullName>Cleric</fullName>
            </value>
            <value>
                <fullName>Druid</fullName>
            </value>
            <value>
                <fullName>Fighter</fullName>
            </value>
            <value>
                <fullName>Monk</fullName>
            </value>
            <value>
                <fullName>Paladin</fullName>
            </value>
            <value>
                <fullName>Ranger</fullName>
            </value>
            <value>
                <fullName>Rogue</fullName>
            </value>
            <value>
                <fullName>Sorcerer</fullName>
            </value>
            <value>
                <fullName>Warlock</fullName>
            </value>
            <value>
                <fullName>Wizard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>