Hack/main/default/objects/Character__c/fields/Damage__c.field-meta.xml
<CustomField>
    <fullName>Damage__c</fullName>
    <description>Damage</description>
    <formula>CASE(Weapon__c,
  &quot;Sword&quot;,  (Dexterity__c*0.5 + Strength__c*1.5) * Level__c/2,
  &quot;Polearm&quot;, (Dexterity__c*1.5 + Strength__c*0.5) * Level__c/2,
  &quot;Dagger&quot;, Dexterity__c*2.5*(Level__c/2),
  &quot;Staff&quot;, (Intelligence__c + Wisdom__c*0.5) * Level__c/2,
  &quot;Ax&quot;, Strength__c*2.5*(Level__c/2),
  &quot;Deez Mits&quot;, Strength__c*Level__c/2,
6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Damage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>