Hack/main/default/objects/Character__c/fields/Deity__c.field-meta.xml
<CustomField>
    <fullName>Deity__c</fullName>
    <label>Deity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>