Hack/main/default/objects/Character__c/fields/Exp__c.field-meta.xml
<CustomField>
    <fullName>Exp__c</fullName>
    <description>a</description>
    <label>Exp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>