Hack/main/default/objects/Character__c/fields/Intelligence__c.field-meta.xml
<CustomField>
    <fullName>Intelligence__c</fullName>
    <label>Intelligence</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>