Hack/main/default/objects/Character__c/fields/Max_Hp__c.field-meta.xml
<CustomField>
    <fullName>Max_Hp__c</fullName>
    <label>Max_Hp</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>