Hack/main/default/objects/Character__c/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <label>Race</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>