Hack/main/default/objects/Character__c/fields/Weapon__c.field-meta.xml
<CustomField>
    <fullName>Weapon__c</fullName>
    <description>Weapon</description>
    <label>Weapon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sword</fullName>
            </value>
            <value>
                <fullName>Polearm</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Dagger</fullName>
            </value>
            <value>
                <fullName>Ax</fullName>
            </value>
            <value>
                <fullName>Deez Mits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>